examples/test/testpolicy4224.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4224
  namespace: namespace410
spec:
  podSelector:
    matchLabels:
      key31: value24
      key9: value18
      key3: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value47
          key46: value36
      podSelector:
        matchLabels:
          key42: value27
